--- a/Dockerfile.txt
+++ b/Dockerfile.txt
@@ -1,13 +1,7 @@
-# Use Kali Linux as base image
 FROM kalilinux/kali-rolling:latest
-
-# Set working directory
 WORKDIR /app
-
-# Set Python unbuffered mode
 ENV PYTHONUNBUFFERED=1
 
-# Update and install required tools
 RUN apt-get update && \
     apt-get install -y --no-install-recommends \
     python3 \
@@ -19,31 +13,21 @@ RUN apt-get update && \
     dirb \
     exploitdb \
     netcat-traditional \
+    hydra \
+    john \
+    hashcat \
+    aircrack-ng \
     curl \
     libcap2-bin \
-    && apt-get clean \
-    && rm -rf /var/lib/apt/lists/*
+    && apt-get clean && rm -rf /var/lib/apt/lists/*
 
-# Update exploitdb database
 RUN searchsploit -u || true
-
-# Copy requirements first for better caching
 COPY requirements.txt .
-
-# Install Python dependencies
 RUN pip3 install --no-cache-dir -r requirements.txt --break-system-packages
-
-# Copy the server code
 COPY sectools_server.py .
-
-# Create non-root user
+COPY password_tools.py .
 RUN useradd -m -u 1000 mcpuser && \
     chown -R mcpuser:mcpuser /app && \
-    # Add capabilities for network tools
     setcap cap_net_raw,cap_net_admin,cap_net_bind_service+eip /usr/bin/nmap
-
-# Switch to non-root user
 USER mcpuser
-
-# Run the server
 CMD ["python3", "sectools_server.py"]
